--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
+  "homepage": "https://nickoo20.github.io/searchX",
   "name": "my-project",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy" : "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.2.0",
